tests/paczka1/small_fuzzy/11136431.err
Error in line 3: iLhOFmOFYme A871 83,9
Error in line 15: QXCC A8Y1 6Y,0
